--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
 <body>
   <div class="container" style="height: 100vh;">
     <div class="row" style="height: 100%; background-color: pink">
-      
-      
+      <div class="col-sm-4 col-md-6 col-lg-4">
+        <div style="background-color:hotpink; height: 100%;">Columns</div>
+      </div>
+      <div class="col-sm-4 col-md-6 col-lg-4">
+        <div style="background-color:hotpink; height: 100%;">Columns</div>
+      </div>
+      <div class="col-sm-4 col-md-6 col-lg-4">
+        <div style="background-color:hotpink; height: 100%;">Columns</div>
+      </div>
     </div>
   </div>
 </body>
