💄 implement avatars ui

--- a/index.html
+++ b/index.html
@@ -18,15 +18,24 @@
 </head>
 <body>
   <div class="container" style="height: 100vh;">
-    <div class="row" style="height: 100%; background-color: pink">
-      <div class="col-sm-4 col-md-6 col-lg-4">
-        <div style="background-color:hotpink; height: 100%;">Columns</div>
+    <div>
+      <div class="tag-red">특가</div>
+      <div class="tag-gray">무료배송</div>
+      <div class="tag-green">첫 구매 무료배송</div>
+    </div>
+
+    <div>
+      <div class="avatar-24">
+        <img src="./assets/images/img-user-01.jpg" alt="">
       </div>
-      <div class="col-sm-4 col-md-6 col-lg-4">
-        <div style="background-color:hotpink; height: 100%;">Columns</div>
+      <div class="avatar-32">
+        <img src="./assets/images/img-user-01.jpg" alt="">
       </div>
-      <div class="col-sm-4 col-md-6 col-lg-4">
-        <div style="background-color:hotpink; height: 100%;">Columns</div>
+      <div class="avatar-24">
+        <img src="./assets/images/img-user-default.png" alt="">
+      </div>
+      <div class="avatar-32">
+        <img src="./assets/images/img-user-default.png" alt="">
       </div>
     </div>
   </div>
