--- a/index.html
+++ b/index.html
@@ -126,37 +126,57 @@
         <span class="currency">원</span>
       </div>
     </div>
+    <div>
+      <div>
+        <button type="button" class="btn-primary btn-32">버튼입니다.</button>
+        <button type="button" class="btn-secondary btn-32">버튼입니다.</button>
+        <button type="button" class="btn-outline btn-32">버튼입니다.</button>
+        <button type="button" class="btn-ghost btn-32">버튼입니다.</button>
+      </div>
+      <div>
+        <button type="button" class="btn-primary btn-40">버튼입니다.</button>
+        <button type="button" class="btn-secondary btn-40">버튼입니다.</button>
+        <button type="button" class="btn-outline btn-40">버튼입니다.</button>
+        <button type="button" class="btn-ghost btn-40">버튼입니다.</button>
+      </div>
+      <div>
+        <button type="button" class="btn-primary btn-48">버튼입니다.</button>
+        <button type="button" class="btn-secondary btn-48">버튼입니다.</button>
+        <button type="button" class="btn-outline btn-48">버튼입니다.</button>
+        <button type="button" class="btn-ghost btn-48">버튼입니다.</button>
+      </div>
+      <div>
+        <button type="button" class="btn-primary btn-55">버튼입니다.</button>
+        <button type="button" class="btn-secondary btn-55">버튼입니다.</button>
+        <button type="button" class="btn-outline btn-55">버튼입니다.</button>
+        <button type="button" class="btn-ghost btn-55">버튼입니다.</button>
+      </div>
+      <div>
+        <button type="button" class="btn-primary btn-55" disabled>버튼입니다.</button>
+        <button type="button" class="btn-secondary btn-55" disabled>버튼입니다.</button>
+        <button type="button" class="btn-outline btn-55" disabled>버튼입니다.</button>
+        <button type="button" class="btn-ghost btn-55" disabled>버튼입니다.</button>
+      </div>
+    </div>
 
     <div>
-      <button type="button" class="btn-primary btn-32">버튼입니다.</button>
-      <button type="button" class="btn-secondary btn-32">버튼입니다.</button>
-      <button type="button" class="btn-outline btn-32">버튼입니다.</button>
-      <button type="button" class="btn-ghost btn-32">버튼입니다.</button>
+      <div>
+        <div class="select-group">
+          <select class="form-select">
+            <option value="1">선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1</option>
+            <option value="2">선택사항 2</option>
+            <option value="3">선택사항 3</option>
+            <option value="4">선택사항 4</option>
+            <option value="5">선택사항 5</option>
+          </select>
+          <i class="ic-caret"></i>
+        </div>
+
+        <input type="text" placeholder="스토어 검색">
+      </div>
+      
     </div>
-    <div>
-      <button type="button" class="btn-primary btn-40">버튼입니다.</button>
-      <button type="button" class="btn-secondary btn-40">버튼입니다.</button>
-      <button type="button" class="btn-outline btn-40">버튼입니다.</button>
-      <button type="button" class="btn-ghost btn-40">버튼입니다.</button>
-    </div>
-    <div>
-      <button type="button" class="btn-primary btn-48">버튼입니다.</button>
-      <button type="button" class="btn-secondary btn-48">버튼입니다.</button>
-      <button type="button" class="btn-outline btn-48">버튼입니다.</button>
-      <button type="button" class="btn-ghost btn-48">버튼입니다.</button>
-    </div>
-    <div>
-      <button type="button" class="btn-primary btn-55">버튼입니다.</button>
-      <button type="button" class="btn-secondary btn-55">버튼입니다.</button>
-      <button type="button" class="btn-outline btn-55">버튼입니다.</button>
-      <button type="button" class="btn-ghost btn-55">버튼입니다.</button>
-    </div>
-    <div>
-      <button type="button" class="btn-primary btn-55" disabled>버튼입니다.</button>
-      <button type="button" class="btn-secondary btn-55" disabled>버튼입니다.</button>
-      <button type="button" class="btn-outline btn-55" disabled>버튼입니다.</button>
-      <button type="button" class="btn-ghost btn-55" disabled>버튼입니다.</button>
-    </div>
+
   </div>
 </body>
 </html>
