--- a/index.html
+++ b/index.html
@@ -161,18 +161,25 @@
 
     <div>
       <div>
-        <div class="select-group">
+        <div class="select-group is-active">
           <select class="form-select">
-            <option value="1">선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1선택사항 1</option>
+            <option value="1">선택사항 1선택사항 1선택사항 1선택사항 1 </option>
             <option value="2">선택사항 2</option>
             <option value="3">선택사항 3</option>
             <option value="4">선택사항 4</option>
             <option value="5">선택사항 5</option>
           </select>
-          <i class="ic-caret"></i>
+          <i class="ic-caret" aria-hidden></i>
         </div>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
 
-        <input type="text" placeholder="스토어 검색">
+        <div class="input-group">
+          <i class="ic-search" aria-hidden></i>
+          <input class="form-input" type="text" placeholder="스토어 검색">
+        </div>
       </div>
       
     </div>
