💄 implement pagenation ui

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <span class="currency">원</span>
       </div>
     </div>
+
     <div>
       <div>
         <button type="button" class="btn-primary btn-32">버튼입니다.</button>
@@ -172,9 +173,6 @@
           <i class="ic-caret" aria-hidden></i>
         </div>
         <br/>
-        <br/>
-        <br/>
-        <br/>
 
         <div class="input-group">
           <i class="ic-search" aria-hidden></i>
@@ -184,6 +182,34 @@
       
     </div>
 
+    <div>
+      <div class="pagination">
+        <button class="page-control page-prev">
+          <i class="ic-chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item is-active">
+            <a href="/">1111122</a>
+          </li>
+          <li class="page-item">
+            <a href="/">212121</a>
+          </li>
+          <li class="page-item">
+            <a href="/">312121</a>
+          </li>
+          <li class="page-item">
+            <a href="/">412121</a>
+          </li>
+          <li class="page-item">
+            <a href="/">512121</a>
+          </li>
+        </ol>
+        <button class="page-control page-next">
+          <i class="ic-chevron"></i>
+        </button>
+      </div>
+
+    </div>
   </div>
 </body>
 </html>
